// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RingDataGrid > should render correctly data grid with auto refresh 1`] = `
<div>
  <div
    class="MuiDataGrid-root MuiDataGrid-root--densityStandard MuiDataGrid-withBorderColor MuiDataGridVariables-2491758308 css-xcefjg-MuiDataGrid-root"
    style="--DataGrid-hasScrollX: 1; --DataGrid-hasScrollY: 1; --DataGrid-scrollbarSize: 0px; --DataGrid-rowWidth: 400px; --DataGrid-columnsTotalWidth: 400px; --DataGrid-leftPinnedWidth: 0px; --DataGrid-rightPinnedWidth: 0px; --DataGrid-headerHeight: 56px; --DataGrid-headersTotalHeight: 56px; --DataGrid-topContainerHeight: 56px; --DataGrid-bottomContainerHeight: 0px; --height: 52px;"
  >
    <div
      class="MuiDataGrid-mainContent"
      role="presentation"
    >
      <div
        style="border-bottom: 1px solid rgb(217, 217, 217); display: flex; flex-wrap: nowrap; align-content: center; justify-content: center; align-items: center; flex-direction: row; height: 40px; padding: 0px 8px 0px 8px;"
      >
        <div
          class="MuiStack-root css-tmsmf9-MuiStack-root"
        >
          <div
            class="MuiStack-root css-1rlitzi-MuiStack-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-obqxx6-MuiTypography-root"
            >
              Results
              : 
              6400
            </span>
          </div>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-sizeSmall MuiSelect-root css-1tya4ni-MuiInputBase-root-MuiInput-root-MuiSelect-root"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Sort by"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input MuiInputBase-inputSizeSmall css-14zuiwb-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              role="combobox"
              tabindex="0"
            >
              Publication date
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              tabindex="-1"
              value="publicationDate"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-1wdd23g-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="KeyboardArrowDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiStack-root css-1oxswqj-MuiStack-root"
          >
            <button
              aria-label="Disable auto refresh"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-13grmf1-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              title="Disable auto refresh"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                data-testid="SyncIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4z"
                />
              </svg>
            </button>
            <button
              aria-label="Refresh"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-13grmf1-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              title="Refresh"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                data-testid="RefreshIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                />
              </svg>
            </button>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="FilterListIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4zM3 6v2h18V6zm3 7h12v-2H6z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-colcount="2"
        aria-multiselectable="true"
        aria-rowcount="3"
        class="MuiDataGrid-main css-uk7t8p-MuiDataGrid-main"
        role="grid"
        tabindex="-1"
      >
        <div
          class="css-18l11qw"
          data-id="gridPanelAnchor"
          role="presentation"
        />
        <div
          class="MuiDataGrid-virtualScroller MuiDataGrid-virtualScroller--hasScrollX css-rktzwf-MuiDataGrid-virtualScroller"
          role="presentation"
          style="overflow-x: hidden;"
        >
          <div
            class="MuiDataGrid-topContainer MuiDataGrid-container--top css-b1wygl"
            role="presentation"
          >
            <div
              class="MuiDataGrid-columnHeaders css-1gtv474-MuiDataGrid-columnHeaders"
              role="presentation"
            >
              <div
                aria-rowindex="1"
                class="MuiDataGrid-row--borderBottom css-yseucu-MuiDataGrid-columnHeaderRow"
                role="row"
                style="height: 56px;"
              >
                <div
                  role="presentation"
                  style="width: 0px;"
                />
                <div
                  aria-colindex="1"
                  aria-sort="none"
                  class="MuiDataGrid-columnHeader MuiDataGrid-columnHeader--sortable MuiDataGrid-withBorderColor"
                  data-field="title"
                  role="columnheader"
                  style="width: 200px;"
                  tabindex="0"
                >
                  <div
                    class="MuiDataGrid-columnHeaderDraggableContainer"
                    draggable="true"
                    role="presentation"
                  >
                    <div
                      class="MuiDataGrid-columnHeaderTitleContainer"
                      role="presentation"
                    >
                      <div
                        class="MuiDataGrid-columnHeaderTitleContainerContent"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                          data-mui-internal-clone-element="true"
                        >
                          Title
                        </div>
                      </div>
                      <div
                        class="MuiDataGrid-iconButtonContainer css-ltf0zy-MuiDataGrid-iconButtonContainer"
                      >
                        <span
                          aria-label="Sort"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Sort"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-sortButton css-168tf43-MuiButtonBase-root-MuiIconButton-root-MuiDataGrid-sortButton"
                            field="title"
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiDataGrid-sortIcon css-1hon42z-MuiSvgIcon-root"
                              data-testid="ArrowUpwardIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                    <div
                      class="MuiDataGrid-menuIcon"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        aria-label="Title column menu"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-hiqy5m-MuiButtonBase-root-MuiIconButton-root"
                        data-mui-internal-clone-element="true"
                        id="_r_m_"
                        tabindex="-1"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-zysrwz-MuiSvgIcon-root"
                          data-testid="TripleDotsVerticalIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                    style="min-height: 56px;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1dhtbeh-MuiSvgIcon-root"
                      data-testid="SeparatorIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <rect
                        height="24"
                        rx="0.5"
                        width="1"
                        x="11.5"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  aria-colindex="2"
                  aria-sort="none"
                  class="MuiDataGrid-columnHeader MuiDataGrid-columnHeader--sortable MuiDataGrid-withBorderColor MuiDataGrid-columnHeader--last"
                  data-field="publicationDate"
                  role="columnheader"
                  style="width: 200px;"
                  tabindex="-1"
                >
                  <div
                    class="MuiDataGrid-columnHeaderDraggableContainer"
                    draggable="true"
                    role="presentation"
                  >
                    <div
                      class="MuiDataGrid-columnHeaderTitleContainer"
                      role="presentation"
                    >
                      <div
                        class="MuiDataGrid-columnHeaderTitleContainerContent"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                          data-mui-internal-clone-element="true"
                        >
                          Publication date
                        </div>
                      </div>
                      <div
                        class="MuiDataGrid-iconButtonContainer css-ltf0zy-MuiDataGrid-iconButtonContainer"
                      >
                        <span
                          aria-label="Sort"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Sort"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-sortButton css-168tf43-MuiButtonBase-root-MuiIconButton-root-MuiDataGrid-sortButton"
                            field="publicationDate"
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiDataGrid-sortIcon css-1hon42z-MuiSvgIcon-root"
                              data-testid="ArrowUpwardIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                    <div
                      class="MuiDataGrid-menuIcon"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        aria-label="Publication date column menu"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-hiqy5m-MuiButtonBase-root-MuiIconButton-root"
                        data-mui-internal-clone-element="true"
                        id="_r_t_"
                        tabindex="-1"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-zysrwz-MuiSvgIcon-root"
                          data-testid="TripleDotsVerticalIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                    style="min-height: 56px;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1dhtbeh-MuiSvgIcon-root"
                      data-testid="SeparatorIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <rect
                        height="24"
                        rx="0.5"
                        width="1"
                        x="11.5"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="MuiDataGrid-filler"
                  role="presentation"
                />
                <div
                  class="MuiDataGrid-scrollbarFiller"
                  role="presentation"
                />
              </div>
              <div
                class="css-oj85k"
              />
            </div>
          </div>
          <div
            class="MuiDataGrid-virtualScrollerContent css-qghlpz-MuiDataGrid-virtualScrollerContent"
            role="presentation"
            style="width: auto; flex-basis: 104px; flex-shrink: 0;"
          >
            <div
              class="MuiDataGrid-virtualScrollerRenderZone css-11dqcl8-MuiDataGrid-virtualScrollerRenderZone"
              role="rowgroup"
              style="transform: translate3d(0, 0px, 0);"
            >
              <div
                aria-rowindex="2"
                aria-selected="false"
                class="MuiDataGrid-row MuiDataGrid-row--firstVisible"
                data-id="0"
                data-rowindex="0"
                role="row"
                style="max-height: 52px; min-height: 52px; --height: 52px;"
              >
                <div
                  class="MuiDataGrid-cellOffsetLeft"
                  role="presentation"
                  style="width: 0px;"
                />
                <div
                  aria-colindex="1"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="0"
                  data-field="title"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="Article 1"
                >
                  Article 1
                </div>
                <div
                  aria-colindex="2"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="1"
                  data-field="publicationDate"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="10/16/2003, 7:11:27 PM"
                >
                  10/16/2003, 7:11:27 PM
                </div>
                <div
                  class="MuiDataGrid-cell MuiDataGrid-cellEmpty"
                  role="presentation"
                />
              </div>
              <div
                aria-rowindex="3"
                aria-selected="false"
                class="MuiDataGrid-row MuiDataGrid-row--lastVisible"
                data-id="1"
                data-rowindex="1"
                role="row"
                style="max-height: 52px; min-height: 52px; --height: 52px;"
              >
                <div
                  class="MuiDataGrid-cellOffsetLeft"
                  role="presentation"
                  style="width: 0px;"
                />
                <div
                  aria-colindex="1"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="0"
                  data-field="title"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="Article 2"
                >
                  Article 2
                </div>
                <div
                  aria-colindex="2"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="1"
                  data-field="publicationDate"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="7/13/2022, 9:39:01 AM"
                >
                  7/13/2022, 9:39:01 AM
                </div>
                <div
                  class="MuiDataGrid-cell MuiDataGrid-cellEmpty"
                  role="presentation"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiDataGrid-bottomContainer MuiDataGrid-container--bottom css-gzxaox"
            role="presentation"
          />
        </div>
        <div
          class="MuiDataGrid-scrollShadow MuiDataGrid-scrollShadow--horizontal css-1v1ckry-MuiDataGrid-scrollShadow"
          style="--hasScrollStart: 0; --hasScrollEnd: 0;"
        />
        <div
          aria-hidden="true"
          class="MuiDataGrid-scrollbar MuiDataGrid-scrollbar--horizontal css-1j20uzp"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-scrollbarContent"
            style="width: 400px;"
          />
        </div>
        <div
          class="MuiDataGrid-scrollShadow MuiDataGrid-scrollShadow--vertical css-1xl5cpl-MuiDataGrid-scrollShadow"
          style="--hasScrollStart: 0; --hasScrollEnd: 0;"
        />
        <div
          aria-hidden="true"
          class="MuiDataGrid-scrollbar MuiDataGrid-scrollbar--vertical css-1ablnqd"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-scrollbarContent"
            style="height: 104px;"
          />
        </div>
        <div
          aria-hidden="true"
          class="css-980l56"
        />
        <div
          style="position: absolute; pointer-events: none; color: rgba(130, 130, 130, 0.62); z-index: 100000; width: 100%; text-align: center; bottom: 50%; right: 0px; letter-spacing: 5px; font-size: 24px;"
        >
          MUI X Missing license key
        </div>
      </div>
    </div>
    <style
      href="/MuiDataGridVariables-2491758308"
    >
      .MuiDataGridVariables-2491758308{--DataGrid-t-spacing-unit:8px;--DataGrid-t-color-border-base:rgba(224, 224, 224, 1);--DataGrid-t-color-background-base:#fff;--DataGrid-t-color-background-overlay:#fff;--DataGrid-t-color-background-backdrop:rgba(255, 255, 255, 0.38);--DataGrid-t-color-foreground-base:rgba(38, 38, 38, 1);--DataGrid-t-color-foreground-muted:rgba(123, 123, 123, 1);--DataGrid-t-color-foreground-accent:rgba(0, 134, 204, 1);--DataGrid-t-color-foreground-disabled:rgba(157, 157, 157, 1);--DataGrid-t-color-foreground-error:rgba(188, 24, 40, 1);--DataGrid-t-color-interactive-hover:#f5f5f5;--DataGrid-t-color-interactive-hover-opacity:0.04;--DataGrid-t-color-interactive-focus:rgba(from rgba(0, 167, 238, 1) r g b / 1);--DataGrid-t-color-interactive-focus-opacity:0.12;--DataGrid-t-color-interactive-disabled:rgba(from rgba(196, 196, 196, 1) r g b / 1);--DataGrid-t-color-interactive-disabled-opacity:0.38;--DataGrid-t-color-interactive-selected:#eeeeee;--DataGrid-t-color-interactive-selected-opacity:0.08;--DataGrid-t-header-background-base:#fff;--DataGrid-t-cell-background-pinned:#fff;--DataGrid-t-radius-base:4px;--DataGrid-t-typography-font-family-base:Arial, sans-serif;--DataGrid-t-typography-font-weight-light:300;--DataGrid-t-typography-font-weight-regular:400;--DataGrid-t-typography-font-weight-medium:500;--DataGrid-t-typography-font-weight-bold:700;--DataGrid-t-typography-font-body:400 0.8125rem / 1.25rem Arial, sans-serif;--DataGrid-t-typography-font-small:400 0.75rem / 1.125rem Arial, sans-serif;--DataGrid-t-typography-font-large:400 0.875rem / 1.5rem Arial, sans-serif;--DataGrid-t-transition-easing-ease-in:cubic-bezier(0.4, 0, 1, 1);--DataGrid-t-transition-easing-ease-out:cubic-bezier(0.0, 0, 0.2, 1);--DataGrid-t-transition-easing-ease-in-out:cubic-bezier(0.4, 0, 0.2, 1);--DataGrid-t-transition-duration-short:200ms;--DataGrid-t-transition-duration-base:250ms;--DataGrid-t-transition-duration-long:300ms;--DataGrid-t-shadow-base:0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);--DataGrid-t-shadow-overlay:0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);--DataGrid-t-z-index-panel:1300;--DataGrid-t-z-index-menu:1300;}
    </style>
  </div>
</div>
`;

exports[`RingDataGrid > should render correctly data grid with bulk actions 1`] = `
<div>
  <div
    class="MuiDataGrid-root MuiDataGrid-root--densityStandard MuiDataGrid-withBorderColor MuiDataGridVariables-2491758308 css-xcefjg-MuiDataGrid-root"
    style="--DataGrid-hasScrollX: 1; --DataGrid-hasScrollY: 1; --DataGrid-scrollbarSize: 0px; --DataGrid-rowWidth: 450px; --DataGrid-columnsTotalWidth: 450px; --DataGrid-leftPinnedWidth: 0px; --DataGrid-rightPinnedWidth: 0px; --DataGrid-headerHeight: 56px; --DataGrid-headersTotalHeight: 56px; --DataGrid-topContainerHeight: 56px; --DataGrid-bottomContainerHeight: 0px; --height: 52px;"
  >
    <div
      class="MuiDataGrid-mainContent"
      role="presentation"
    >
      <div
        style="border-bottom: 1px solid rgb(217, 217, 217); display: flex; flex-wrap: nowrap; align-content: center; justify-content: center; align-items: center; flex-direction: row; height: 40px; padding: 0px 8px 0px 8px; background-color: rgb(233, 233, 233);"
      >
        <div
          class="MuiStack-root css-tmsmf9-MuiStack-root"
        >
          <div
            class="MuiStack-root css-1rlitzi-MuiStack-root"
          >
            <button
              aria-label="Delete"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-18c0wpr-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              disabled=""
              style="cursor: pointer;"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                data-testid="DeleteIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                />
              </svg>
            </button>
            <button
              aria-label="Edit"
              class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-18c0wpr-MuiButtonBase-root-MuiIconButton-root"
              data-mui-internal-clone-element="true"
              disabled=""
              style="cursor: pointer;"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                data-testid="EditIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                />
              </svg>
            </button>
          </div>
          <div
            class="MuiStack-root css-1rs44qm-MuiStack-root"
          >
            <div
              class="MuiStack-root css-1kq5d21-MuiStack-root"
            >
              <span
                class="MuiTypography-root MuiTypography-caption css-obqxx6-MuiTypography-root"
              >
                0
                /
                5000
              </span>
              <button
                aria-label="Close bulk actions"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-13grmf1-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                  data-testid="CloseIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-colcount="3"
        aria-multiselectable="true"
        aria-rowcount="3"
        class="MuiDataGrid-main css-uk7t8p-MuiDataGrid-main"
        role="grid"
        tabindex="-1"
      >
        <div
          class="css-18l11qw"
          data-id="gridPanelAnchor"
          role="presentation"
        />
        <div
          class="MuiDataGrid-virtualScroller MuiDataGrid-virtualScroller--hasScrollX css-rktzwf-MuiDataGrid-virtualScroller"
          role="presentation"
          style="overflow-x: hidden;"
        >
          <div
            class="MuiDataGrid-topContainer MuiDataGrid-container--top css-b1wygl"
            role="presentation"
          >
            <div
              class="MuiDataGrid-columnHeaders css-1gtv474-MuiDataGrid-columnHeaders"
              role="presentation"
            >
              <div
                aria-rowindex="1"
                class="MuiDataGrid-row--borderBottom css-yseucu-MuiDataGrid-columnHeaderRow"
                role="row"
                style="height: 56px;"
              >
                <div
                  role="presentation"
                  style="width: 0px;"
                />
                <div
                  aria-colindex="1"
                  aria-sort="none"
                  class="MuiDataGrid-columnHeader MuiDataGrid-columnHeader--alignCenter MuiDataGrid-withBorderColor MuiDataGrid-columnHeaderCheckbox"
                  data-field="__check__"
                  role="columnheader"
                  style="width: 50px;"
                  tabindex="0"
                >
                  <div
                    class="MuiDataGrid-columnHeaderDraggableContainer"
                    draggable="false"
                    role="presentation"
                  >
                    <div
                      class="MuiDataGrid-columnHeaderTitleContainer"
                      role="presentation"
                    >
                      <div
                        class="MuiDataGrid-columnHeaderTitleContainerContent"
                      >
                        <span
                          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiDataGrid-checkboxInput css-g2rt04-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
                        >
                          <input
                            aria-label="Select all rows"
                            class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                            data-indeterminate="false"
                            name="select_all_rows"
                            tabindex="-1"
                            type="checkbox"
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                            data-testid="CheckBoxOutlineBlankIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--sideRight"
                    style="min-height: 56px;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1dhtbeh-MuiSvgIcon-root"
                      data-testid="SeparatorIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <rect
                        height="24"
                        rx="0.5"
                        width="1"
                        x="11.5"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  aria-colindex="2"
                  aria-sort="none"
                  class="MuiDataGrid-columnHeader MuiDataGrid-columnHeader--sortable MuiDataGrid-withBorderColor"
                  data-field="title"
                  role="columnheader"
                  style="width: 200px;"
                  tabindex="-1"
                >
                  <div
                    class="MuiDataGrid-columnHeaderDraggableContainer"
                    draggable="true"
                    role="presentation"
                  >
                    <div
                      class="MuiDataGrid-columnHeaderTitleContainer"
                      role="presentation"
                    >
                      <div
                        class="MuiDataGrid-columnHeaderTitleContainerContent"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                          data-mui-internal-clone-element="true"
                        >
                          Title
                        </div>
                      </div>
                      <div
                        class="MuiDataGrid-iconButtonContainer css-ltf0zy-MuiDataGrid-iconButtonContainer"
                      >
                        <span
                          aria-label="Sort"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Sort"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-sortButton css-168tf43-MuiButtonBase-root-MuiIconButton-root-MuiDataGrid-sortButton"
                            field="title"
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiDataGrid-sortIcon css-1hon42z-MuiSvgIcon-root"
                              data-testid="ArrowUpwardIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                    <div
                      class="MuiDataGrid-menuIcon"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        aria-label="Title column menu"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-hiqy5m-MuiButtonBase-root-MuiIconButton-root"
                        data-mui-internal-clone-element="true"
                        id="_r_1c_"
                        tabindex="-1"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-zysrwz-MuiSvgIcon-root"
                          data-testid="TripleDotsVerticalIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                    style="min-height: 56px;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1dhtbeh-MuiSvgIcon-root"
                      data-testid="SeparatorIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <rect
                        height="24"
                        rx="0.5"
                        width="1"
                        x="11.5"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  aria-colindex="3"
                  aria-sort="none"
                  class="MuiDataGrid-columnHeader MuiDataGrid-columnHeader--sortable MuiDataGrid-withBorderColor MuiDataGrid-columnHeader--last"
                  data-field="publicationDate"
                  role="columnheader"
                  style="width: 200px;"
                  tabindex="-1"
                >
                  <div
                    class="MuiDataGrid-columnHeaderDraggableContainer"
                    draggable="true"
                    role="presentation"
                  >
                    <div
                      class="MuiDataGrid-columnHeaderTitleContainer"
                      role="presentation"
                    >
                      <div
                        class="MuiDataGrid-columnHeaderTitleContainerContent"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                          data-mui-internal-clone-element="true"
                        >
                          Publication date
                        </div>
                      </div>
                      <div
                        class="MuiDataGrid-iconButtonContainer css-ltf0zy-MuiDataGrid-iconButtonContainer"
                      >
                        <span
                          aria-label="Sort"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Sort"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-sortButton css-168tf43-MuiButtonBase-root-MuiIconButton-root-MuiDataGrid-sortButton"
                            field="publicationDate"
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiDataGrid-sortIcon css-1hon42z-MuiSvgIcon-root"
                              data-testid="ArrowUpwardIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                    <div
                      class="MuiDataGrid-menuIcon"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        aria-label="Publication date column menu"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-hiqy5m-MuiButtonBase-root-MuiIconButton-root"
                        data-mui-internal-clone-element="true"
                        id="_r_1j_"
                        tabindex="-1"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-zysrwz-MuiSvgIcon-root"
                          data-testid="TripleDotsVerticalIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                    style="min-height: 56px;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1dhtbeh-MuiSvgIcon-root"
                      data-testid="SeparatorIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <rect
                        height="24"
                        rx="0.5"
                        width="1"
                        x="11.5"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="MuiDataGrid-filler"
                  role="presentation"
                />
                <div
                  class="MuiDataGrid-scrollbarFiller"
                  role="presentation"
                />
              </div>
              <div
                class="css-oj85k"
              />
            </div>
          </div>
          <div
            class="MuiDataGrid-virtualScrollerContent css-qghlpz-MuiDataGrid-virtualScrollerContent"
            role="presentation"
            style="width: auto; flex-basis: 104px; flex-shrink: 0;"
          >
            <div
              class="MuiDataGrid-virtualScrollerRenderZone css-11dqcl8-MuiDataGrid-virtualScrollerRenderZone"
              role="rowgroup"
              style="transform: translate3d(0, 0px, 0);"
            >
              <div
                aria-rowindex="2"
                aria-selected="false"
                class="MuiDataGrid-row MuiDataGrid-row--firstVisible"
                data-id="0"
                data-rowindex="0"
                role="row"
                style="max-height: 52px; min-height: 52px; --height: 52px;"
              >
                <div
                  class="MuiDataGrid-cellOffsetLeft"
                  role="presentation"
                  style="width: 0px;"
                />
                <div
                  aria-colindex="1"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textCenter MuiDataGrid-cellCheckbox MuiDataGrid-cell--flex"
                  data-colindex="0"
                  data-field="__check__"
                  role="gridcell"
                  style="--width: 50px;"
                  tabindex="-1"
                >
                  <span
                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiDataGrid-checkboxInput css-g2rt04-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
                  >
                    <input
                      aria-label="Select row"
                      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                      data-indeterminate="false"
                      name="select_row"
                      tabindex="-1"
                      type="checkbox"
                      value="false"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                      data-testid="CheckBoxOutlineBlankIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  aria-colindex="2"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="1"
                  data-field="title"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="Article 1"
                >
                  Article 1
                </div>
                <div
                  aria-colindex="3"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="2"
                  data-field="publicationDate"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="10/16/2003, 7:11:27 PM"
                >
                  10/16/2003, 7:11:27 PM
                </div>
                <div
                  class="MuiDataGrid-cell MuiDataGrid-cellEmpty"
                  role="presentation"
                />
              </div>
              <div
                aria-rowindex="3"
                aria-selected="false"
                class="MuiDataGrid-row MuiDataGrid-row--lastVisible"
                data-id="1"
                data-rowindex="1"
                role="row"
                style="max-height: 52px; min-height: 52px; --height: 52px;"
              >
                <div
                  class="MuiDataGrid-cellOffsetLeft"
                  role="presentation"
                  style="width: 0px;"
                />
                <div
                  aria-colindex="1"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textCenter MuiDataGrid-cellCheckbox MuiDataGrid-cell--flex"
                  data-colindex="0"
                  data-field="__check__"
                  role="gridcell"
                  style="--width: 50px;"
                  tabindex="-1"
                >
                  <span
                    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiDataGrid-checkboxInput css-g2rt04-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
                  >
                    <input
                      aria-label="Select row"
                      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                      data-indeterminate="false"
                      name="select_row"
                      tabindex="-1"
                      type="checkbox"
                      value="false"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                      data-testid="CheckBoxOutlineBlankIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  aria-colindex="2"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="1"
                  data-field="title"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="Article 2"
                >
                  Article 2
                </div>
                <div
                  aria-colindex="3"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="2"
                  data-field="publicationDate"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="7/13/2022, 9:39:01 AM"
                >
                  7/13/2022, 9:39:01 AM
                </div>
                <div
                  class="MuiDataGrid-cell MuiDataGrid-cellEmpty"
                  role="presentation"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiDataGrid-bottomContainer MuiDataGrid-container--bottom css-gzxaox"
            role="presentation"
          />
        </div>
        <div
          class="MuiDataGrid-scrollShadow MuiDataGrid-scrollShadow--horizontal css-1v1ckry-MuiDataGrid-scrollShadow"
          style="--hasScrollStart: 0; --hasScrollEnd: 0;"
        />
        <div
          aria-hidden="true"
          class="MuiDataGrid-scrollbar MuiDataGrid-scrollbar--horizontal css-1j20uzp"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-scrollbarContent"
            style="width: 450px;"
          />
        </div>
        <div
          class="MuiDataGrid-scrollShadow MuiDataGrid-scrollShadow--vertical css-1xl5cpl-MuiDataGrid-scrollShadow"
          style="--hasScrollStart: 0; --hasScrollEnd: 0;"
        />
        <div
          aria-hidden="true"
          class="MuiDataGrid-scrollbar MuiDataGrid-scrollbar--vertical css-1ablnqd"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-scrollbarContent"
            style="height: 104px;"
          />
        </div>
        <div
          aria-hidden="true"
          class="css-980l56"
        />
        <div
          style="position: absolute; pointer-events: none; color: rgba(130, 130, 130, 0.62); z-index: 100000; width: 100%; text-align: center; bottom: 50%; right: 0px; letter-spacing: 5px; font-size: 24px;"
        >
          MUI X Missing license key
        </div>
      </div>
    </div>
    <style
      href="/MuiDataGridVariables-2491758308"
    >
      .MuiDataGridVariables-2491758308{--DataGrid-t-spacing-unit:8px;--DataGrid-t-color-border-base:rgba(224, 224, 224, 1);--DataGrid-t-color-background-base:#fff;--DataGrid-t-color-background-overlay:#fff;--DataGrid-t-color-background-backdrop:rgba(255, 255, 255, 0.38);--DataGrid-t-color-foreground-base:rgba(38, 38, 38, 1);--DataGrid-t-color-foreground-muted:rgba(123, 123, 123, 1);--DataGrid-t-color-foreground-accent:rgba(0, 134, 204, 1);--DataGrid-t-color-foreground-disabled:rgba(157, 157, 157, 1);--DataGrid-t-color-foreground-error:rgba(188, 24, 40, 1);--DataGrid-t-color-interactive-hover:#f5f5f5;--DataGrid-t-color-interactive-hover-opacity:0.04;--DataGrid-t-color-interactive-focus:rgba(from rgba(0, 167, 238, 1) r g b / 1);--DataGrid-t-color-interactive-focus-opacity:0.12;--DataGrid-t-color-interactive-disabled:rgba(from rgba(196, 196, 196, 1) r g b / 1);--DataGrid-t-color-interactive-disabled-opacity:0.38;--DataGrid-t-color-interactive-selected:#eeeeee;--DataGrid-t-color-interactive-selected-opacity:0.08;--DataGrid-t-header-background-base:#fff;--DataGrid-t-cell-background-pinned:#fff;--DataGrid-t-radius-base:4px;--DataGrid-t-typography-font-family-base:Arial, sans-serif;--DataGrid-t-typography-font-weight-light:300;--DataGrid-t-typography-font-weight-regular:400;--DataGrid-t-typography-font-weight-medium:500;--DataGrid-t-typography-font-weight-bold:700;--DataGrid-t-typography-font-body:400 0.8125rem / 1.25rem Arial, sans-serif;--DataGrid-t-typography-font-small:400 0.75rem / 1.125rem Arial, sans-serif;--DataGrid-t-typography-font-large:400 0.875rem / 1.5rem Arial, sans-serif;--DataGrid-t-transition-easing-ease-in:cubic-bezier(0.4, 0, 1, 1);--DataGrid-t-transition-easing-ease-out:cubic-bezier(0.0, 0, 0.2, 1);--DataGrid-t-transition-easing-ease-in-out:cubic-bezier(0.4, 0, 0.2, 1);--DataGrid-t-transition-duration-short:200ms;--DataGrid-t-transition-duration-base:250ms;--DataGrid-t-transition-duration-long:300ms;--DataGrid-t-shadow-base:0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);--DataGrid-t-shadow-overlay:0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);--DataGrid-t-z-index-panel:1300;--DataGrid-t-z-index-menu:1300;}
    </style>
  </div>
</div>
`;

exports[`RingDataGrid > should render correctly data grid with custom toolbar 1`] = `
<div>
  <div
    class="MuiDataGrid-root MuiDataGrid-root--densityStandard MuiDataGrid-withBorderColor MuiDataGridVariables-2491758308 css-xcefjg-MuiDataGrid-root"
    style="--DataGrid-hasScrollX: 1; --DataGrid-hasScrollY: 1; --DataGrid-scrollbarSize: 0px; --DataGrid-rowWidth: 400px; --DataGrid-columnsTotalWidth: 400px; --DataGrid-leftPinnedWidth: 0px; --DataGrid-rightPinnedWidth: 0px; --DataGrid-headerHeight: 56px; --DataGrid-headersTotalHeight: 56px; --DataGrid-topContainerHeight: 56px; --DataGrid-bottomContainerHeight: 0px; --height: 52px;"
  >
    <div
      class="MuiDataGrid-mainContent"
      role="presentation"
    >
      <div
        style="border-bottom: 1px solid rgb(217, 217, 217); display: flex; flex-wrap: nowrap; align-content: center; justify-content: center; align-items: center; flex-direction: row; height: 40px; padding: 0px 8px 0px 8px;"
      >
        <div
          class="MuiStack-root css-tmsmf9-MuiStack-root"
        >
          <div
            class="MuiStack-root css-1rlitzi-MuiStack-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-obqxx6-MuiTypography-root"
            >
              Results
              : 
              6400
            </span>
          </div>
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-sizeSmall MuiSelect-root css-1tya4ni-MuiInputBase-root-MuiInput-root-MuiSelect-root"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Sort by"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input MuiInputBase-inputSizeSmall css-14zuiwb-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              role="combobox"
              tabindex="0"
            >
              Publication date
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              tabindex="-1"
              value="publicationDate"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-1wdd23g-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="KeyboardArrowDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiStack-root css-1oxswqj-MuiStack-root"
          >
            <button
              aria-label="Refresh"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-13grmf1-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              title="Refresh"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                data-testid="RefreshIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                />
              </svg>
            </button>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="FilterListIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 18h4v-2h-4zM3 6v2h18V6zm3 7h12v-2H6z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-colcount="2"
        aria-multiselectable="true"
        aria-rowcount="3"
        class="MuiDataGrid-main css-uk7t8p-MuiDataGrid-main"
        role="grid"
        tabindex="-1"
      >
        <div
          class="css-18l11qw"
          data-id="gridPanelAnchor"
          role="presentation"
        />
        <div
          class="MuiDataGrid-virtualScroller MuiDataGrid-virtualScroller--hasScrollX css-rktzwf-MuiDataGrid-virtualScroller"
          role="presentation"
          style="overflow-x: hidden;"
        >
          <div
            class="MuiDataGrid-topContainer MuiDataGrid-container--top css-b1wygl"
            role="presentation"
          >
            <div
              class="MuiDataGrid-columnHeaders css-1gtv474-MuiDataGrid-columnHeaders"
              role="presentation"
            >
              <div
                aria-rowindex="1"
                class="MuiDataGrid-row--borderBottom css-yseucu-MuiDataGrid-columnHeaderRow"
                role="row"
                style="height: 56px;"
              >
                <div
                  role="presentation"
                  style="width: 0px;"
                />
                <div
                  aria-colindex="1"
                  aria-sort="none"
                  class="MuiDataGrid-columnHeader MuiDataGrid-columnHeader--sortable MuiDataGrid-withBorderColor"
                  data-field="title"
                  role="columnheader"
                  style="width: 200px;"
                  tabindex="0"
                >
                  <div
                    class="MuiDataGrid-columnHeaderDraggableContainer"
                    draggable="true"
                    role="presentation"
                  >
                    <div
                      class="MuiDataGrid-columnHeaderTitleContainer"
                      role="presentation"
                    >
                      <div
                        class="MuiDataGrid-columnHeaderTitleContainerContent"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                          data-mui-internal-clone-element="true"
                        >
                          Title
                        </div>
                      </div>
                      <div
                        class="MuiDataGrid-iconButtonContainer css-ltf0zy-MuiDataGrid-iconButtonContainer"
                      >
                        <span
                          aria-label="Sort"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Sort"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-sortButton css-168tf43-MuiButtonBase-root-MuiIconButton-root-MuiDataGrid-sortButton"
                            field="title"
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiDataGrid-sortIcon css-1hon42z-MuiSvgIcon-root"
                              data-testid="ArrowUpwardIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                    <div
                      class="MuiDataGrid-menuIcon"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        aria-label="Title column menu"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-hiqy5m-MuiButtonBase-root-MuiIconButton-root"
                        data-mui-internal-clone-element="true"
                        id="_r_4_"
                        tabindex="-1"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-zysrwz-MuiSvgIcon-root"
                          data-testid="TripleDotsVerticalIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                    style="min-height: 56px;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1dhtbeh-MuiSvgIcon-root"
                      data-testid="SeparatorIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <rect
                        height="24"
                        rx="0.5"
                        width="1"
                        x="11.5"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  aria-colindex="2"
                  aria-sort="none"
                  class="MuiDataGrid-columnHeader MuiDataGrid-columnHeader--sortable MuiDataGrid-withBorderColor MuiDataGrid-columnHeader--last"
                  data-field="publicationDate"
                  role="columnheader"
                  style="width: 200px;"
                  tabindex="-1"
                >
                  <div
                    class="MuiDataGrid-columnHeaderDraggableContainer"
                    draggable="true"
                    role="presentation"
                  >
                    <div
                      class="MuiDataGrid-columnHeaderTitleContainer"
                      role="presentation"
                    >
                      <div
                        class="MuiDataGrid-columnHeaderTitleContainerContent"
                      >
                        <div
                          class="MuiDataGrid-columnHeaderTitle css-1gqmilo-MuiDataGrid-columnHeaderTitle"
                          data-mui-internal-clone-element="true"
                        >
                          Publication date
                        </div>
                      </div>
                      <div
                        class="MuiDataGrid-iconButtonContainer css-ltf0zy-MuiDataGrid-iconButtonContainer"
                      >
                        <span
                          aria-label="Sort"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Sort"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-sortButton css-168tf43-MuiButtonBase-root-MuiIconButton-root-MuiDataGrid-sortButton"
                            field="publicationDate"
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall MuiDataGrid-sortIcon css-1hon42z-MuiSvgIcon-root"
                              data-testid="ArrowUpwardIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                    <div
                      class="MuiDataGrid-menuIcon"
                    >
                      <button
                        aria-expanded="false"
                        aria-haspopup="menu"
                        aria-label="Publication date column menu"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall MuiDataGrid-menuIconButton css-hiqy5m-MuiButtonBase-root-MuiIconButton-root"
                        data-mui-internal-clone-element="true"
                        id="_r_b_"
                        tabindex="-1"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-zysrwz-MuiSvgIcon-root"
                          data-testid="TripleDotsVerticalIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                  <div
                    class="MuiDataGrid-columnSeparator MuiDataGrid-columnSeparator--resizable MuiDataGrid-columnSeparator--sideRight"
                    style="min-height: 56px;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiDataGrid-iconSeparator css-1dhtbeh-MuiSvgIcon-root"
                      data-testid="SeparatorIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <rect
                        height="24"
                        rx="0.5"
                        width="1"
                        x="11.5"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="MuiDataGrid-filler"
                  role="presentation"
                />
                <div
                  class="MuiDataGrid-scrollbarFiller"
                  role="presentation"
                />
              </div>
              <div
                class="css-oj85k"
              />
            </div>
          </div>
          <div
            class="MuiDataGrid-virtualScrollerContent css-qghlpz-MuiDataGrid-virtualScrollerContent"
            role="presentation"
            style="width: auto; flex-basis: 104px; flex-shrink: 0;"
          >
            <div
              class="MuiDataGrid-virtualScrollerRenderZone css-11dqcl8-MuiDataGrid-virtualScrollerRenderZone"
              role="rowgroup"
              style="transform: translate3d(0, 0px, 0);"
            >
              <div
                aria-rowindex="2"
                aria-selected="false"
                class="MuiDataGrid-row MuiDataGrid-row--firstVisible"
                data-id="0"
                data-rowindex="0"
                role="row"
                style="max-height: 52px; min-height: 52px; --height: 52px;"
              >
                <div
                  class="MuiDataGrid-cellOffsetLeft"
                  role="presentation"
                  style="width: 0px;"
                />
                <div
                  aria-colindex="1"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="0"
                  data-field="title"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="Article 1"
                >
                  Article 1
                </div>
                <div
                  aria-colindex="2"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="1"
                  data-field="publicationDate"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="10/16/2003, 7:11:27 PM"
                >
                  10/16/2003, 7:11:27 PM
                </div>
                <div
                  class="MuiDataGrid-cell MuiDataGrid-cellEmpty"
                  role="presentation"
                />
              </div>
              <div
                aria-rowindex="3"
                aria-selected="false"
                class="MuiDataGrid-row MuiDataGrid-row--lastVisible"
                data-id="1"
                data-rowindex="1"
                role="row"
                style="max-height: 52px; min-height: 52px; --height: 52px;"
              >
                <div
                  class="MuiDataGrid-cellOffsetLeft"
                  role="presentation"
                  style="width: 0px;"
                />
                <div
                  aria-colindex="1"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="0"
                  data-field="title"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="Article 2"
                >
                  Article 2
                </div>
                <div
                  aria-colindex="2"
                  aria-colspan="1"
                  aria-rowspan="1"
                  class="MuiDataGrid-cell MuiDataGrid-cell--textLeft"
                  data-colindex="1"
                  data-field="publicationDate"
                  role="gridcell"
                  style="--width: 200px;"
                  tabindex="-1"
                  title="7/13/2022, 9:39:01 AM"
                >
                  7/13/2022, 9:39:01 AM
                </div>
                <div
                  class="MuiDataGrid-cell MuiDataGrid-cellEmpty"
                  role="presentation"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiDataGrid-bottomContainer MuiDataGrid-container--bottom css-gzxaox"
            role="presentation"
          />
        </div>
        <div
          class="MuiDataGrid-scrollShadow MuiDataGrid-scrollShadow--horizontal css-1v1ckry-MuiDataGrid-scrollShadow"
          style="--hasScrollStart: 0; --hasScrollEnd: 0;"
        />
        <div
          aria-hidden="true"
          class="MuiDataGrid-scrollbar MuiDataGrid-scrollbar--horizontal css-1j20uzp"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-scrollbarContent"
            style="width: 400px;"
          />
        </div>
        <div
          class="MuiDataGrid-scrollShadow MuiDataGrid-scrollShadow--vertical css-1xl5cpl-MuiDataGrid-scrollShadow"
          style="--hasScrollStart: 0; --hasScrollEnd: 0;"
        />
        <div
          aria-hidden="true"
          class="MuiDataGrid-scrollbar MuiDataGrid-scrollbar--vertical css-1ablnqd"
          tabindex="-1"
        >
          <div
            class="MuiDataGrid-scrollbarContent"
            style="height: 104px;"
          />
        </div>
        <div
          aria-hidden="true"
          class="css-980l56"
        />
        <div
          style="position: absolute; pointer-events: none; color: rgba(130, 130, 130, 0.62); z-index: 100000; width: 100%; text-align: center; bottom: 50%; right: 0px; letter-spacing: 5px; font-size: 24px;"
        >
          MUI X Missing license key
        </div>
      </div>
    </div>
    <style
      href="/MuiDataGridVariables-2491758308"
    >
      .MuiDataGridVariables-2491758308{--DataGrid-t-spacing-unit:8px;--DataGrid-t-color-border-base:rgba(224, 224, 224, 1);--DataGrid-t-color-background-base:#fff;--DataGrid-t-color-background-overlay:#fff;--DataGrid-t-color-background-backdrop:rgba(255, 255, 255, 0.38);--DataGrid-t-color-foreground-base:rgba(38, 38, 38, 1);--DataGrid-t-color-foreground-muted:rgba(123, 123, 123, 1);--DataGrid-t-color-foreground-accent:rgba(0, 134, 204, 1);--DataGrid-t-color-foreground-disabled:rgba(157, 157, 157, 1);--DataGrid-t-color-foreground-error:rgba(188, 24, 40, 1);--DataGrid-t-color-interactive-hover:#f5f5f5;--DataGrid-t-color-interactive-hover-opacity:0.04;--DataGrid-t-color-interactive-focus:rgba(from rgba(0, 167, 238, 1) r g b / 1);--DataGrid-t-color-interactive-focus-opacity:0.12;--DataGrid-t-color-interactive-disabled:rgba(from rgba(196, 196, 196, 1) r g b / 1);--DataGrid-t-color-interactive-disabled-opacity:0.38;--DataGrid-t-color-interactive-selected:#eeeeee;--DataGrid-t-color-interactive-selected-opacity:0.08;--DataGrid-t-header-background-base:#fff;--DataGrid-t-cell-background-pinned:#fff;--DataGrid-t-radius-base:4px;--DataGrid-t-typography-font-family-base:Arial, sans-serif;--DataGrid-t-typography-font-weight-light:300;--DataGrid-t-typography-font-weight-regular:400;--DataGrid-t-typography-font-weight-medium:500;--DataGrid-t-typography-font-weight-bold:700;--DataGrid-t-typography-font-body:400 0.8125rem / 1.25rem Arial, sans-serif;--DataGrid-t-typography-font-small:400 0.75rem / 1.125rem Arial, sans-serif;--DataGrid-t-typography-font-large:400 0.875rem / 1.5rem Arial, sans-serif;--DataGrid-t-transition-easing-ease-in:cubic-bezier(0.4, 0, 1, 1);--DataGrid-t-transition-easing-ease-out:cubic-bezier(0.0, 0, 0.2, 1);--DataGrid-t-transition-easing-ease-in-out:cubic-bezier(0.4, 0, 0.2, 1);--DataGrid-t-transition-duration-short:200ms;--DataGrid-t-transition-duration-base:250ms;--DataGrid-t-transition-duration-long:300ms;--DataGrid-t-shadow-base:0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);--DataGrid-t-shadow-overlay:0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);--DataGrid-t-z-index-panel:1300;--DataGrid-t-z-index-menu:1300;}
    </style>
  </div>
</div>
`;
